Fix countries stats titles text alignment

--- a/src/app/journey/countries-stats/countries-stats.component.scss
+++ b/src/app/journey/countries-stats/countries-stats.component.scss
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-align: center;
   margin: 1rem;
   gap: 1rem;
 }
